# lonely_watcher

./: Cargo.toml  LICENSE  Makefile  README.md
src/: cli.rs  cpu_info.rs  error.rs  lib.rs  logger.rs  main.rs  prelude.rs  utils.rs
src/logger/: cpu_info.rs  mem_info.rs  mod.rs
