[package]
name = "sys_monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
derive_more = { version = "1.0.0-beta", features = ["from"]}
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json"] }
